--- a/mysite/home/templates/home/home_page.html
+++ b/mysite/home/templates/home/home_page.html
@@ -2,17 +2,8 @@
 
 {% load wagtailcore_tags %}
 
-{% block body_class %}template-blogindexpage{% endblock %}
+{% block body_class %}template-homepage{% endblock %}
 
 {% block content %}
-    <h1>{{ page.title }}</h1>
-
-    <div class="intro">{{ page.intro|richtext }}</div>
-
-    {% for post in page.get_children %}
-        <h2><a href="{% pageurl post %}">{{ post.title }}</a></h2>
-        {{ post.specific.intro }}
-        {{ post.specific.body|richtext }}
-    {% endfor %}
-
+    {{ page.body|richtext }}
 {% endblock %}
